Fixed the build and removed unused code